peac_dev/force-app/main/default/objects/Package_Activity__c/Package_Activity__c.object-meta.xml
<CustomObject>
    <label>Package Activity</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Package Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>