peac_dev/force-app/main/default/objects/Package_Activity__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Package Activities</relationshipLabel>
    <relationshipName>Package_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>