peac_dev/force-app/main/default/objects/Package_Activity__c/fields/File_Link__c.field-meta.xml
<CustomField>
    <fullName>File_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>File Link</label>
    <type>Url</type>
</CustomField>